fixed navbar tabs visibility

--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -56,7 +56,8 @@
                 align-items: center;
                 color: #e5e5e5;
                 margin-left: 2rem;
-                
+                transition-property: opacity;
+                transition-duration: .5s;
             }
         }
 
